@@ -10,12 +10,9 @@ h1, h2, h3, h4, h5, h6 { font-weight: bolder }
 
 /* Now the custom parts */
 
-/* Make edit sections (which are inside h# tags) normal-sized
-   and otherwise format */
+/* Make edit sections (which are inside h# tags) normal-sized */
 .editsection {
 	font-weight: normal;
-	float: right;
-	margin-left: 5px;
 }
 h1 .editsection { font-size: 50% }
 h2 .editsection { font-size: 66.7% }
